--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -236,7 +236,7 @@ h1 {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(14, 15, 85);
     display: none;
     align-items: center;
     justify-items: center;
