--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -134,29 +134,30 @@ h1 {
     z-index: 4;
     transition: opacity 0.5s ease, transform 0.4s ease;
 }
-.setting-text-container {
-    position: relative;
-}
-.settings-logo {
+.settings-text-container {
     position: absolute;
-    width: 10%;
-    height: 10%;
+    top: 2%;
+    left: 5%;
+    display: flex;
+    align-items: center;
+}
+
+.settings-logo {
+    width: 20%;
+    height: auto;
     color: white;
-    top: 7%;
-    left: 3%;
     z-index: 4;
     display: none;
+    margin-right: 18px;
     transition: opacity 0.75s ease, transform 0.5s ease;
 }
+
 .settings-text {
-    position: absolute;
     width: 10%;
-    height: 10%;
+    height: auto;
     color: white;
-    font-size: 60px;
+    font-size: 60px; /* Adjust the font-size as needed */
     text-shadow: 2px 2px 2px black;
-    top: 2.5%;
-    left: 13%;
     z-index: 4;
     display: none;
     transition: opacity 0.75s ease, transform 0.5s ease;
@@ -972,6 +973,9 @@ input:checked + .zoom-slider:before {
 }
 .random-image {
     z-index: -1;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .starrail-container {
     position: fixed;
